Update index.html with font setting

--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
             var STORAGE_KEY_LOGS = "reading_log_entries_v1";
             var STORAGE_KEY_PROFILE = "reading_log_profile_v1";
             var STORAGE_KEY_BOOKS = "reading_log_books_v1";
+            var STORAGE_KEY_SETTINGS = "reading_log_settings_v1";
+
+            var FONT_SIZES = [
+                { id: 'small', name: 'Small', scale: 0.85 },
+                { id: 'medium', name: 'Medium', scale: 1 },
+                { id: 'large', name: 'Large', scale: 1.15 }
+            ];
 
             // Reader type definitions
             var READER_TYPES = [
@@ -328,6 +335,18 @@
                 var showSplash = splashState[0];
                 var setShowSplash = splashState[1];
 
+                // App settings state
+                var settingsState = useState(function() {
+                    return JSON.parse(safeStorage.getItem(STORAGE_KEY_SETTINGS) || '{"fontSize":"medium"}');
+                });
+                var appSettings = settingsState[0];
+                var setAppSettings = settingsState[1];
+
+                // Bug report modal state
+                var bugReportState = useState(false);
+                var showBugReport = bugReportState[0];
+                var setShowBugReport = bugReportState[1];
+
                 var installState = useState(null);
                 var deferredPrompt = installState[0];
                 var setDeferredPrompt = installState[1];
@@ -399,6 +418,14 @@
                 useEffect(function() {
                     safeStorage.setItem(STORAGE_KEY_BOOKS, JSON.stringify(completedBooks));
                 }, [completedBooks]);
+
+                // Save and apply settings
+                useEffect(function() {
+                    safeStorage.setItem(STORAGE_KEY_SETTINGS, JSON.stringify(appSettings));
+                    // Apply font size
+                    var fontSetting = FONT_SIZES.find(function(f) { return f.id === appSettings.fontSize; }) || FONT_SIZES[1];
+                    document.documentElement.style.fontSize = (fontSetting.scale * 16) + 'px';
+                }, [appSettings]);
 
                 function notify(msg) {
                     setStatusMsg(msg);
@@ -1276,8 +1303,40 @@
                     );
                 }
 
+                function renderBugReportModal() {
+                    if (!showBugReport) return null;
+                    return h('div', { className: "fixed inset-0 bg-slate-900/40 backdrop-blur-[2px] z-[200] flex items-center justify-center p-4" },
+                        h('div', { className: "bg-white dark:bg-slate-800 w-full max-w-sm rounded-2xl p-6 space-y-4 animate-in shadow-xl" },
+                            h('div', { className: "flex items-center gap-3" },
+                                h('div', { className: "w-12 h-12 rounded-full bg-amber-100 dark:bg-amber-900/30 flex items-center justify-center" },
+                                    h(Icon, { name: "Bug", className: "w-6 h-6 text-amber-600" })
+                                ),
+                                h('div', null,
+                                    h('h3', { className: "text-sm font-bold text-slate-800 dark:text-slate-200" }, "Report a Bug"),
+                                    h('p', { className: "text-[10px] text-slate-400" }, "Found something wrong?")
+                                )
+                            ),
+                            h('div', { className: "bg-slate-50 dark:bg-slate-700 p-4 rounded-xl space-y-2" },
+                                h('p', { className: "text-xs text-slate-600 dark:text-slate-300" }, "Please send bug reports or feedback to:"),
+                                h('div', { className: "flex items-center gap-2 bg-white dark:bg-slate-800 p-3 rounded-lg border dark:border-slate-600" },
+                                    h(Icon, { name: "Mail", className: "w-4 h-4 text-teal-600 flex-shrink-0" }),
+                                    h('a', {
+                                        href: "mailto:alfie_yang@moe.edu.sg",
+                                        className: "text-sm font-bold text-teal-600 hover:underline break-all"
+                                    }, "alfie_yang@moe.edu.sg")
+                                ),
+                                h('p', { className: "text-[10px] text-slate-400 italic" }, "Include details about the bug and steps to reproduce it.")
+                            ),
+                            h('button', {
+                                onClick: function() { setShowBugReport(false); },
+                                className: "w-full p-3 bg-teal-600 text-white rounded-xl font-bold text-xs uppercase"
+                            }, "Got it!")
+                        )
+                    );
+                }
+
                 function renderProfile() {
-                    return h('div', { className: "space-y-5 animate-in pb-4" },
+                    return h('div', { className: "space-y-5 animate-in pb-4 overflow-y-auto" },
                         h('section', { className: "space-y-3" },
                             h('h2', { className: "text-sm font-black px-1 uppercase tracking-wider text-slate-500 dark:text-slate-400" }, "Reader Profile"),
                             h('div', { className: "bg-white dark:bg-slate-800 p-5 rounded-2xl border dark:border-slate-700 space-y-4 shadow-sm" },
@@ -1348,6 +1407,37 @@
                         h('section', { className: "space-y-3" },
                             h('h2', { className: "text-sm font-black px-1 uppercase tracking-wider text-slate-500 dark:text-slate-400" }, "App Settings"),
                             h('div', { className: "bg-white dark:bg-slate-800 p-3 rounded-2xl border dark:border-slate-700 space-y-1 shadow-sm" },
+                                // Font Size Setting
+                                h('div', { className: "p-3" },
+                                    h('div', { className: "flex items-center gap-3 mb-3" },
+                                        h('div', { className: "w-8 h-8 rounded-lg bg-purple-50 dark:bg-purple-900/50 text-purple-600 flex items-center justify-center" },
+                                            h(Icon, { name: "Type" })
+                                        ),
+                                        h('div', { className: "text-left flex-1" },
+                                            h('p', { className: "font-bold text-xs text-slate-700 dark:text-slate-300" }, "Font Size"),
+                                            h('p', { className: "text-[9px] text-slate-400" }, "Adjust text size")
+                                        )
+                                    ),
+                                    h('div', { className: "grid grid-cols-3 gap-2" },
+                                        FONT_SIZES.map(function(size) {
+                                            var isActive = appSettings.fontSize === size.id;
+                                            return h('button', {
+                                                key: size.id,
+                                                onClick: function() { setAppSettings(Object.assign({}, appSettings, { fontSize: size.id })); },
+                                                className: "p-2.5 rounded-xl border transition-all text-center " +
+                                                    (isActive
+                                                        ? 'border-purple-500 bg-purple-50 dark:bg-purple-900/30 text-purple-600'
+                                                        : 'border-slate-200 dark:border-slate-600 bg-slate-50 dark:bg-slate-700 text-slate-500 dark:text-slate-400 hover:border-purple-300')
+                                            },
+                                                h('span', {
+                                                    className: "font-bold uppercase",
+                                                    style: { fontSize: (size.scale * 10) + 'px' }
+                                                }, size.name)
+                                            );
+                                        })
+                                    )
+                                ),
+                                h('div', { className: "border-t dark:border-slate-700 my-1" }),
                                 !isStandalone && h('button', {
                                     onClick: handleInstallClick,
                                     className: "w-full flex items-center gap-3 p-3 hover:bg-slate-50 dark:hover:bg-slate-700 rounded-xl transition-colors text-teal-600"
@@ -1386,6 +1476,19 @@
                                 h('input', {
                                     type: "file", ref: fileInputRef, onChange: importData, accept: ".json", className: "hidden"
                                 }),
+                                h('div', { className: "border-t dark:border-slate-700 my-1" }),
+                                // Report Bug button
+                                h('button', {
+                                    onClick: function() { setShowBugReport(true); },
+                                    className: "w-full flex items-center gap-3 p-3 hover:bg-slate-50 dark:hover:bg-slate-700 rounded-xl transition-colors"
+                                },
+                                    h('div', { className: "w-8 h-8 rounded-lg bg-amber-50 dark:bg-amber-900/50 text-amber-600 flex items-center justify-center" }, h(Icon, { name: "Bug" })),
+                                    h('div', { className: "text-left flex-1" },
+                                        h('p', { className: "font-bold text-xs text-slate-700 dark:text-slate-300" }, "Report Bug"),
+                                        h('p', { className: "text-[9px] text-slate-400" }, "Let us know about issues")
+                                    ),
+                                    h(Icon, { name: "ChevronRight", className: "text-slate-300 w-3 h-3" })
+                                ),
                                 h('div', { className: "pt-2 px-1" },
                                     h('button', {
                                         onClick: resetAllData,
@@ -1394,7 +1497,7 @@
                                 )
                             )
                         ),
-                        h('p', { className: "text-center text-[9px] font-bold text-slate-300 dark:text-slate-600 uppercase pb-6" }, "Reading Log v2.0")
+                        h('p', { className: "text-center text-[9px] font-bold text-slate-300 dark:text-slate-600 uppercase pb-6" }, "Reading Log v2.1")
                     );
                 }
 
@@ -1611,6 +1714,7 @@
                     ),
                     renderAddModal(),
                     renderReviewModal(),
+                    renderBugReportModal(),
                     confirmDialog && h(ConfirmDialog, {
                         message: confirmDialog.message,
                         onConfirm: confirmDialog.onConfirm,
